# TextCase

./: LICENSE  README.md  pyproject.toml
src/textcase/: change_case.py  helpers.py
